# chatGPT_telegram_bot

./: .env  .env.example  .gitgnore  .gitignore  bot.py  parse_messages.py  pyproject.toml  request.py  requirements.txt
config_data/: config.py
hadnlers/: user_handlers.py
keyboards/: keyboards.py  set_menu.py
lexicon/: lexicon_ru.py  prompts.py
services/: services.py
