[tool.poetry]
name = "chatgpt-bot"
version = "0.1.0"
description = ""
authors = ["kachus <ka4usova.e@gmail.com>"]
readme = "README.md"
packages = [{include = "chatgpt_bot"}]

[tool.poetry.dependencies]
python = "^3.9"
asyncio = "^3.4.3"
aiogram = "^2.24"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
